# frappe_wms

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
frappe_wms/: hooks.py  patches.txt
frappe_wms/config/: desktop.py
frappe_wms/fixtures/: Custom Field.json  Dashboard Chart.json  Number Card.json  Workspace.json  custom_field.json  dashboard.json  dashboard_chart.json  number_card.json  workspace.json
frappe_wms/patches/v1_0/: add_customer_to_location_stock_and_movement.py  add_wms_to_custom_desktops.py  clean_legacy_wms_desktop_links.py  create_purchase_receipt_custom_fields.py  create_wms_workspace.py  fix_wms_workspace_visibility.py  force_clean_legacy_wms_link_to_values.py  phase1_foundation.py  phase2_7_schema.py  remove_user_specific_wms_workspaces.py  rename_wms_workspace.py
frappe_wms/patches/v1_1/: normalize_wms_v16_app_routing.py
frappe_wms/patches/v1_2/: remove_standalone_wms_dashboard.py  show_wms_on_desk_home.py  translate_wms_sources_to_english.py
frappe_wms/patches/v1_3/: add_core_key_indexes.py
frappe_wms/public/js/: batch_location_stock.js  batch_location_stock_list.js  location_pick.js  pick_list.js  purchase_receipt.js  wms_cross_dock.js  wms_cycle_count.js  wms_qc_check.js
frappe_wms/tests/: test_location_pick_helpers.py  test_reversal_and_uom.py  test_stock_helper_locks.py
frappe_wms/translations/: fr.csv  nl.csv
frappe_wms/wms/: install.py
frappe_wms/wms/doctype/batch_location_movement/: batch_location_movement.json  (+1 more)
frappe_wms/wms/events/: delivery_note.py  purchase_receipt.py  stock_entry.py  utils.py
(+44 files in other folders)
