[project]
name = "frappe_wms"
authors = [
    { name = "Crings BV", email = "sales@crings.eu" }
]
description = "Lightweight WMS location layer for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "frappe_wms"
